<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_file"
        android:showAsAction="ifRoom"
        android:title="@string/menu_file">

        <!-- android:icon="@drawable/ic_menu_archive" -->
        <menu>
            <item
                android:id="@+id/item_create_database"
                android:title="@string/create_db_title">
            </item>
            <item
                android:id="@+id/item_open_file"
                android:icon="@drawable/ic_menu_archive"
                android:title="@string/menu_open_db">
            </item>
            <item
                android:id="@+id/item_import_pgn"
                android:title="@string/menu_import_pgn">
            </item>
            <item
                android:id="@+id/item_export_pgn"
                android:title="@string/menu_export_pgn">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/item_gamelist"
        android:icon="@drawable/ic_menu_list"
        android:showAsAction="ifRoom"
        android:title="@string/menu_game_list">
    </item>
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/item_game"
        android:showAsAction="ifRoom"
        android:title="@string/menu_game">

        <!-- android:icon="@drawable/ic_menu_archive" -->
        <!-- create empty sub-menu for easy access within code -->
        <menu>
            <item
                android:id="@+id/item_goto_game"
                android:title="@string/menu_goto_game">
            </item>
            <item
                android:id="@+id/item_random_game"
                android:title="@string/menu_random_game">
            </item>
            <item
                android:id="@+id/item_new_game"
                android:title="@string/menu_new_game">
            </item>
            <item
                android:id="@+id/item_retrieve_position"
                android:title="@string/get_fen">
            </item>
            <item
                android:id="@+id/item_save_game"
                android:title="@string/save_game">
            </item>

            <group android:checkableBehavior="all" >
                <item
                    android:id="@+id/item_game_deleted"
                    android:title="@string/menu_game_deleted">
                </item>
                <item
                    android:id="@+id/item_game_isfavorite"
                    android:title="@string/menu_game_isfavorite">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/item_mode"
        android:showAsAction="ifRoom"
        android:title="@string/menu_mode">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/item_review_mode"
                    android:title="@string/menu_review_mode">
                </item>
                <item
                    android:id="@+id/item_analysis_mode"
                    android:title="@string/menu_analysis_mode">
                </item>
                <item
                    android:id="@+id/item_study_mode"
                    android:title="@string/menu_study_mode">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/item_edit"
        android:showAsAction="ifRoom"
        android:title="@string/menu_edit">
        <menu>
            <item
                android:id="@+id/item_paste_clipboard"
                android:title="@string/paste">
            </item>
            <item
                android:id="@+id/item_edit_board"
                android:title="@string/edit_board">
            </item>
            <item
                android:id="@+id/item_strip_moves"
                android:title="@string/truncate_gametree">
            </item>
            <item
                android:id="@+id/item_variation_up"
                android:title="@string/move_var_up">
            </item>
            <item
                android:id="@+id/item_variation_down"
                android:title="@string/move_var_down">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/item_share"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share">
        <menu>
            <item
                android:id="@+id/item_share_game"
                android:title="@string/menu_share_game">
            </item>
            <item
                android:id="@+id/item_share_position"
                android:title="@string/menu_share_position">
            </item>
            <item
                android:id="@+id/item_copy_game_clipboard"
                android:title="@string/copy_game">
            </item>
            <item
                android:id="@+id/item_copy_position_clipboard"
                android:title="@string/copy_position">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/item_manage_engines"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/manage_engines_title">
        <menu>
            <item
                android:id="@+id/item_add_engine"
                android:title="@string/add_engine">
            </item>
            <item
                android:id="@+id/item_remove_engine"
                android:title="@string/remove_engine">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/item_preferences"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/menu_preferences">
    </item>
    <item
        android:id="@+id/item_about"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/menu_about_help">
    </item>

</menu>