<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:baselineAligned="true">
			<TextView
				android:gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:text="@string/name_label"
				android:textAppearance="?android:attr/textAppearanceLarge">
			</TextView>
			<EditText
				android:id="@+id/engine_name"
				android:inputType="text"
				android:text=""
				android:gravity="center_vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="3dip">
			</EditText>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/executable_label"
				android:textAppearance="?android:attr/textAppearanceLarge">
			</TextView>
			<ListView
				android:id="@+id/engine_list"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
			</ListView>
		</LinearLayout>
		<CheckBox
			android:id="@+id/make_current"
			android:text="@string/make_current_engine"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checked="true">
		</CheckBox>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<Button
			android:id="@+id/addengine_add"
			android:onClick="onOkClick"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/add">
		</Button>
		<Button
			android:id="@+id/addengine_cancel"
			android:onClick="onCancelClick"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cancel">
		</Button>
	</LinearLayout>
</LinearLayout>
