<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/search_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/search_current_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_exact_position"
                android:checked="true"
                android:layout_gravity="left"
                android:layout_weight="0">
            </RadioButton>
            <RadioButton
                android:id="@+id/search_pawns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_pawns"
                android:checked="false"
                android:layout_gravity="left"
                android:layout_weight="0">
            </RadioButton>
            <RadioButton
                android:id="@+id/search_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_files"
                android:checked="false"
                android:layout_weight="0"
                android:layout_gravity="left">
            </RadioButton>
            <RadioButton
                android:id="@+id/search_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_any"
                android:checked="false"
                android:layout_weight="0"
                android:layout_gravity="left">
            </RadioButton>
        </RadioGroup>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/search_filter_prompt" />
        <Spinner
            android:id="@+id/search_filter_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/search_filter_prompt" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/search_header_ok"
                android:onClick="onOkClick"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/ok">
            </Button>
            <Button
                android:id="@+id/search_header_cancel"
                android:onClick="onCancelClick"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel">
            </Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>